...
    showBottomMenu: (show: Boolean) -> Unit
) {
    Scaffold(
        snackbarHost = { SnackbarHost(hostState = snackbarHostState) },
        topBar = {
            TopAppBar(
                modifier = Modifier.semantics { contentDescription = "Home screen" },
                title = { Text(text = stringResource(id = R.string.app_name)) }
            )
        }
    ) {
        var selectedComic by remember { mutableStateOf<Comic?>(null) }

...
            LazyVerticalGrid(
                columns = GridCells.Fixed(2),
                horizontalArrangement = Arrangement.spacedBy(8.dp),
                verticalArrangement = Arrangement.spacedBy(8.dp),
                modifier =
                    Modifier
                        .semantics { contentDescription = "List of comics" }
                        .padding(it),
                contentPadding = PaddingValues(vertical = 8.dp, horizontal = 8.dp)
            ) {
                items(
                    count = comics.itemCount,
                    key = comics.itemKey { it.id }
...
                            }
                        }

                        ElevatedButton(
                            modifier =
                                Modifier
                                    .semantics { contentDescription = "See characters" }
                                    .fillMaxWidth()
                                    .padding(start = 4.dp, top = 8.dp, end = 8.dp, bottom = 8.dp),
                            onClick = { onItemClick(targetComic.id) }
                        ) {
                            Icon(
                                modifier = Modifier.padding(4.dp),
...
