...
        topBar = {
            TopAppBar(
                modifier = Modifier.semantics { contentDescription = "Characters screen" },
                title = { Text(text = stringResource(id = R.string.characters_label)) },
                navigationIcon = {
                    IconButton(
                        modifier = Modifier.semantics { contentDescription = "Navigate back" },
                        onClick = navigateBack
                    ) {
                        Icon(
                            imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                            contentDescription = stringResource(id = R.string.navigate_back_label)
                        )
...
            )
        }
    ) {
        LazyColumn(
            modifier =
                Modifier
                    .semantics { contentDescription = "List of characters" }
                    .padding(it),
            contentPadding = PaddingValues(vertical = 4.dp, horizontal = 4.dp)
        ) {
            items(count = characters.itemCount) { index ->
                characters[index]?.let { character ->
                    ElevatedCard(
...
