...
    navigateBack: () -> Unit
) {
    Scaffold(
        snackbarHost = { SnackbarHost(hostState = snackbarHostState) },
        topBar = {
            TopAppBar(
                modifier = Modifier.semantics { contentDescription = "Character screen" },
                title = { Text(text = character?.name ?: stringResource(id = R.string.character_label)) },
                navigationIcon = {
                    IconButton(
                        modifier = Modifier.semantics { contentDescription = "Navigate back" },
                        onClick = navigateBack
                    ) {
...
